--- a/index.html
+++ b/index.html
@@ -98,11 +98,20 @@
       <br />
       <p class="text-p">Hi, I'm Anand.</p>
       <p class="text-p">
-        I'm building <a class="text-link" href="https://cq2.co/">CQ2</a> — a
-        tool for RFCs, designed for thoughtfulness and coherence.
+        I built <a class="text-link" href="https://cq2.co/">CQ2</a> — a tool for
+        RFCs, designed for thoughtfulness and coherence. It's 10x better than
+        existing tools used for RFCs such as Google Docs, GitHub PRs, Discourse,
+        email threads, etc. It hit #2 on
+        <a
+          class="text-link"
+          href="https://news.ycombinator.com/item?id=40277547"
+          >Hacker News</a
+        >, got 20k views, 235 early access sign-ups and 300+ GitHub stars, but
+        didn't take off unfortunately.
       </p>
       <p class="text-p">
-        Before CQ2, I worked as a Product Engineer at Frappe, where I primarily
+        Before starting CQ2, I worked as a Product Engineer at Frappe, where I
+        primarily
         <a
           class="text-link"
           href="https://github.com/frappe/erpnext/pulls?q=is%3Apr+author%3Aanandbaburajan+is%3Aclosed"
@@ -111,17 +120,16 @@
         the Assets Management module in ERPNext and did a bunch of other things.
       </p>
       <p class="text-p">
-        I created
+        I built
         <a class="text-link" href="https://samay.app/">Samay</a> — a free and
         open source meeting poll tool to help people find a time which works for
-        everyone. It has been used to create 2.5k+ polls, has 280+ stars on
-        GitHub and won a Rs 10k prize at
+        everyone. It has been used to create 2.5k+ polls, has 300+ GitHub stars
+        and won a prize at
         <a
           class="text-link"
           href="https://forum.fossunited.org/t/foss-hack-3-0-results/1882#:~:text=Kukkee,meeting%20poll%20tool."
           >FOSS Hack 3.0</a
-        >
-        by FOSS United.
+        >.
       </p>
       <p class="text-p">
         I was a SWE
@@ -165,10 +173,10 @@
         Before my GSoC, I tried building things to solve real-world problems
         (movie piracy, finding status of roads during the Kerala floods,
         accessible mentorship, etc.) and failed, but took part in small
-        hackathons and won some. Before that, in my first year of college, I did
-        freelance WordPress development for 5+ clients and made Rs 45k+. I got
-        started with WordPress when I helped build my parents' WordPress news
-        sites such as TelecomLead.
+        hackathons and won some. Before that, in my first year of college
+        (2017), I did freelance WordPress development for 5+ clients and made
+        some money. I got started with WordPress when I helped build my parents'
+        WordPress news sites such as TelecomLead.
       </p>
       <p class="text-p">
         I got started with programming in my Class 6th by building simple web
@@ -181,7 +189,8 @@
         tech articles, attended tech events, produced tech YouTube
         <a class="text-link" href="https://www.youtube.com/watch?v=c4VpwEXKako"
           >videos</a
-        >, grew the channel to 2.5k+ subscribers and made Rs 35k+ in ad revenue.
+        >, grew the channel to 2.5k+ subscribers and made some money in ad
+        revenue.
       </p>
       <p class="text-p">
         My current areas of interest are startups, product management,
