--- a/index.html
+++ b/index.html
@@ -122,13 +122,8 @@
         I built
         <a class="text-link" href="https://samay.app/">Samay</a> — a free and
         open source meeting poll tool to help people find a time which works for
-        everyone. It has been used to create 2.5k+ polls, has 300+ GitHub stars
-        and won a prize at
-        <a
-          class="text-link"
-          href="https://forum.fossunited.org/t/foss-hack-3-0-results/1882#:~:text=Kukkee,meeting%20poll%20tool."
-          >FOSS Hack 3.0</a
-        >.
+        everyone. It has been used to create 2.5k+ polls and has 300+ GitHub
+        stars.
       </p>
       <p class="text-p">
         I was a SWE
