--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
           href="https://news.ycombinator.com/item?id=40277547"
           >Hacker News</a
         >, got 20k impressions, 235 early access sign-ups and 300+ GitHub stars.
+        Currently in talks with open source communities about their RFC process.
       </p>
       <p class="text-p">
         Before starting CQ2, I worked as a Product Engineer at Frappe, where I
@@ -122,17 +123,17 @@
         I built
         <a class="text-link" href="https://samay.app/">Samay</a> — a free and
         open source meeting poll tool to help people find a time which works for
-        everyone. It has been used to create 2.5k+ polls and has 300+ GitHub
-        stars.
+        everyone. It has been used to create 2.5k+ polls, has 300+ GitHub stars
+        and won a prize at FOSS Hack 3.0.
       </p>
       <p class="text-p">
-        I was a SWE
+        I was one of the SWE interns at HackerRank's
         <a
           class="text-link"
           href="https://www.hackerrank.com/interns/2021/summer/"
-          >intern</a
+          >Summer '21</a
         >
-        at HackerRank, where I built the HackerRank Interviews for Slack
+        internship, where I built the HackerRank Interviews for Slack
         integration and a bunch of features for HackerRank for Work.
       </p>
       <p class="text-p">
@@ -167,10 +168,10 @@
         Before my GSoC, I tried building things to solve real-world problems
         (movie piracy, finding status of roads during the Kerala floods,
         accessible mentorship, etc.) and failed, but took part in small
-        hackathons and won some. Before that, in my first year of college
-        (2017), I did freelance WordPress development for 5+ clients and made
-        some money. I got started with WordPress when I helped build my parents'
-        WordPress news sites such as TelecomLead.
+        hackathons and won some. Before that, in my first year of college, I did
+        freelance WordPress development for 5+ clients. I got started with
+        WordPress when I helped build my parents' WordPress news sites such as
+        TelecomLead.
       </p>
       <p class="text-p">
         I got started with programming in my Class 6th by building simple web
@@ -179,12 +180,12 @@
           >Flash</a
         >
         games. Even that interest was short-lived since I got more interested in
-        gadgets and hence, during high school, I reviewed tech products, wrote
-        tech articles, attended tech events, produced tech YouTube
+        gadgets. Hence, during high school, I covered tech news, did reviews,
+        attended tech press conferences and produced
         <a class="text-link" href="https://www.youtube.com/watch?v=c4VpwEXKako"
           >videos</a
-        >, grew the channel to 2.5k+ subscribers and made some money in ad
-        revenue.
+        >
+        for GizmoLead, which achieved 2.7K+ subscribers and 1M+ total views.
       </p>
       <p class="text-p">
         My current areas of interest are startups, product, communication
