--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
         and won a prize at FOSS Hack 3.0.
       </p>
       <p class="text-p">
-        I was one of the SWE interns at HackerRank's
+        I was one of the SWE interns in HackerRank's
         <a
           class="text-link"
           href="https://www.hackerrank.com/interns/2021/summer/"
           >Summer '21</a
         >
-        internship, where I built the HackerRank Interviews for Slack
-        integration and a bunch of features for HackerRank for Work.
+        batch, where I built the HackerRank Interviews for Slack integration and
+        a bunch of features for HackerRank for Work.
       </p>
       <p class="text-p">
         I
