--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <p class="text-p">
         I built <a class="text-link" href="https://cq2.co/">CQ2</a> — a tool for
         RFCs, designed for thoughtfulness and coherence. It's 10x better than
-        existing tools for RFCs such as Google Docs, GitHub PRs, Discourse,
+        other tools used for RFCs such as Google Docs, GitHub PRs, Discourse,
         email threads, etc. It hit #2 on
         <a
           class="text-link"
@@ -110,8 +110,13 @@
         Currently in talks with open source communities about their RFC process.
       </p>
       <p class="text-p">
-        Before starting CQ2, I worked as a Product Engineer at Frappe, where I
-        primarily
+        I built
+        <a class="text-link" href="https://wordamour.com/">Wordamour</a> — a
+        personalised word search puzzle for your special someone. It has been
+        used by 400+ people and received 10 coffees on Buy Me a Coffee.
+      </p>
+      <p class="text-p">
+        I was a Product Engineer at Frappe, where I primarily
         <a
           class="text-link"
           href="https://github.com/frappe/erpnext/pulls?q=is%3Apr+author%3Aanandbaburajan+is%3Aclosed"
