--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="title" content="Anand Baburajan" />
     <meta
       name="description"
-      content="Hi, I'm Anand. I built CQ2 and Samay. Previously, I was a product engineer at Frappe, a SWE intern at HackerRank and a GSoC student at LiberTEM. My current areas of interest are startups, product management, communication platforms, psychology and education."
+      content="Hi, I'm Anand. I built CQ2, Wordamour and Samay. Previously, I was a product engineer at Frappe, a SWE intern at HackerRank and a GSoC student at LiberTEM. My current areas of interest are startups, product management, communication platforms, psychology and education."
     />
     <style>
       @font-face {
@@ -98,6 +98,9 @@
       <br />
       <p class="text-p">Hi, I'm Anand.</p>
       <p class="text-p">
+        I'm a Growth Engineer at <a class="text-link" href="https://ente.io/">Ente</a>.
+      </p>
+      <p class="text-p">
         I built <a class="text-link" href="https://cq2.co/">CQ2</a> — a tool for
         RFCs, designed for thoughtfulness and coherence. It's 10x better than
         other tools used for RFCs such as Google Docs, GitHub PRs, Discourse,
@@ -126,10 +129,10 @@
       </p>
       <p class="text-p">
         I built
-        <a class="text-link" href="https://samay.app/">Samay</a> — a free and
-        open source meeting poll tool to help people find a time which works for
-        everyone. It has been used to create 2.5k+ polls, has 300+ GitHub stars
-        and won a prize at FOSS Hack 3.0.
+        <a class="text-link" href="https://samay.app/">Samay</a> — a meeting
+        poll tool to help people find a time which works for everyone. It has
+        been used to create 2.5k+ polls, has 300+ GitHub stars and won a prize
+        at FOSS Hack 3.0.
       </p>
       <p class="text-p">
         I was one of the SWE interns in HackerRank's
