--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
       }
       @media (min-width: 600px) {
         #container {
-          min-width: 25rem;
-          max-width: 22%;
+          width: 25rem;
           padding: 1rem;
         }
       }
@@ -98,7 +97,8 @@
       <br />
       <p class="text-p">Hi, I'm Anand.</p>
       <p class="text-p">
-        I'm a Growth Engineer at <a class="text-link" href="https://ente.io/">Ente</a>.
+        I'm a Growth Engineer at
+        <a class="text-link" href="https://ente.io/">Ente</a>.
       </p>
       <p class="text-p">
         I built <a class="text-link" href="https://cq2.co/">CQ2</a> — a tool for
@@ -195,8 +195,8 @@
         for GizmoLead, which got 2.7K+ subscribers and 1M+ total views.
       </p>
       <p class="text-p">
-        My current areas of interest are startups, growth, product, communication
-        platforms, ritual social apps, psychology and education.
+        My current areas of interest are startups, growth, product,
+        communication platforms, ritual social apps, psychology and education.
       </p>
       <br />
       <p>
