--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         used by 400+ people and received 10 coffees on Buy Me a Coffee.
       </p>
       <p class="text-p">
-        I was a Product Engineer at Frappe, where I primarily
+        I was a Product Engineer at Frappe, where I
         <a
           class="text-link"
           href="https://github.com/frappe/erpnext/pulls?q=is%3Apr+author%3Aanandbaburajan+is%3Aclosed"
@@ -131,8 +131,7 @@
         I built
         <a class="text-link" href="https://samay.app/">Samay</a> — a meeting
         poll tool to help people find a time which works for everyone. It has
-        been used to create 2.5k+ polls, got 300+ GitHub stars and won a prize
-        at FOSS Hack 3.0.
+        been used to create 2.5k+ polls and got 300+ GitHub stars.
       </p>
       <p class="text-p">
         I was one of the SWE interns in HackerRank's
