--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@
       <p class="text-p">
         I built
         <a class="text-link" href="https://wordamour.com/">Wordamour</a> — a
-        personalised word search puzzle for your special someone. It has been
-        used by 400+ people and received 10 coffees on Buy Me a Coffee.
+        personalised word search puzzle for your special someone. It has helped
+        people earn brownie points with their spouses and has received 10
+        coffees on Buy Me a Coffee.
       </p>
       <p class="text-p">
         I was a Product Engineer at Frappe, where I
