--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Anand Baburajan</title>
+    <link rel="icon" type="image/x-icon" href="./static/favicon.ico" />
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -161,11 +162,7 @@
         issues (and continued contributing for more than a year).
       </p>
       <p class="text-p">
-        That was my first, proper introduction to open source and real-world
-        software development, and was one of the most transformative experiences
-        I've ever had. When I realised how many smart and motivated students in
-        my college (GEC Palakkad) lacked mentorship and haven’t ever been
-        exposed to what they’re capable of, I started
+        I started and led
         <a class="text-link" href="https://openhack.gitbook.io/openhack-20/"
           >FOSS OpenHack '20</a
         >
@@ -173,27 +170,17 @@
         helped 3 students who went on to do a GSoC with MSS, CERN and Intel.
       </p>
       <p class="text-p">
-        Before my GSoC, I tried building things to solve real-world problems
-        (movie piracy, finding status of roads during the Kerala floods,
-        accessible mentorship, etc.) and failed, but took part in small
-        hackathons and won some. Before that, in my first year of college, I did
-        freelance WordPress development for 5+ clients. I got started with
-        WordPress when I helped build my parents' WordPress news sites such as
-        TelecomLead.
+        I used to help develop and maintain my parents' WordPress news sites
+        such as TelecomLead, and also did some freelance WordPress development
+        for 5+ clients.
       </p>
       <p class="text-p">
-        I got started with programming in my Class 6th by building simple web
-        pages with HTML and CSS but quickly moved on to building simple
-        <a class="text-link" href="https://flashforstarters.wordpress.com/"
-          >Flash</a
-        >
-        games. Even that interest was short-lived since I got more interested in
-        gadgets. Hence, during high school, I covered tech news, did reviews,
-        attended tech press conferences and produced
+        I used to write about tech news, did tech reviews, attended tech press
+        conferences and produced tech
         <a class="text-link" href="https://www.youtube.com/watch?v=c4VpwEXKako"
           >videos</a
         >
-        for GizmoLead, which got 2.7K+ subscribers and 1M+ total views.
+        for GizmoLead, which got ~3K subscribers and 1M+ total views.
       </p>
       <p class="text-p">
         My current areas of interest are startups, growth, product, movies,
