--- a/index.html
+++ b/index.html
@@ -176,11 +176,8 @@
       </p>
       <p class="text-p">
         I wrote about tech news, did tech reviews, attended tech press
-        conferences and produced tech
-        <a class="text-link" href="https://www.youtube.com/watch?v=c4VpwEXKako"
-          >videos</a
-        >
-        for GizmoLead, which got ~3K subscribers and 1M+ total views.
+        conferences and produced tech videos for GizmoLead, which got ~3K
+        subscribers and 1M+ total views.
       </p>
       <p class="text-p">
         My current areas of interest are startups, growth, product, movies,
