--- a/index.html
+++ b/index.html
@@ -103,15 +103,13 @@
       </p>
       <p class="text-p">
         I built <a class="text-link" href="https://cq2.co/">CQ2</a> — a tool for
-        RFCs, designed for thoughtfulness and coherence. It's 10x better than
-        other tools used for RFCs such as Google Docs, GitHub PRs, Discourse,
-        email threads, etc. It hit #2 on
+        RFCs, designed for thoughtfulness and coherence. It hit #2 on
         <a
           class="text-link"
           href="https://news.ycombinator.com/item?id=40277547"
           >Hacker News</a
-        >, got 20k impressions, 235 early access sign-ups (Wave, PostHog, Deno,
-        Pylon Lending, etc) and 300+ GitHub stars.
+        >, got 235 early access sign-ups (Wave, PostHog, Deno, Pylon Lending,
+        etc) and 300+ GitHub stars.
       </p>
       <p class="text-p">
         I built
