--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <br />
       <p class="text-p">Hi, I'm Anand.</p>
       <p class="text-p">
-        I'm a Growth Engineer at
+        I work on marketing and growth initiatives at
         <a class="text-link" href="https://ente.io/">Ente</a>.
       </p>
       <p class="text-p">
@@ -178,8 +178,8 @@
         subscribers and 1M+ total views.
       </p>
       <p class="text-p">
-        My current areas of interest are startups, growth, product, movies,
-        ritual social apps and psychology.
+        My current areas of interest are startups, football, movies, ritual
+        social apps and psychology.
       </p>
       <br />
       <p>
