--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
         I built
         <a class="text-link" href="https://wordamour.com/">Wordamour</a> — a
         personalised word search puzzle for your special someone. It has helped
-        many people earn brownie points with their spouses and received 10
-        coffees on Buy Me a Coffee.
+        many people earn brownie points with their spouses.
       </p>
       <p class="text-p">
         I built <a class="text-link" href="https://cq2.co/">CQ2</a> — a tool for
@@ -176,10 +175,6 @@
         I wrote about tech news, did tech reviews, attended tech press
         conferences and produced tech videos for GizmoLead, which got ~3K
         subscribers and 1M+ total views.
-      </p>
-      <p class="text-p">
-        My current areas of interest are startups, football, movies, ritual
-        social apps and psychology.
       </p>
       <br />
       <p>
