--- a/index.html
+++ b/index.html
@@ -105,17 +105,18 @@
         I built
         <a class="text-link" href="https://wordamour.com/">Wordamour</a> — a
         personalised word search puzzle for your special someone. It has helped
-        many people earn brownie points with their spouses.
+        lots of people earn brownie points with their spouses.
       </p>
       <p class="text-p">
         I built <a class="text-link" href="https://cq2.co/">CQ2</a> — a tool for
-        RFCs, designed for thoughtfulness and coherence. It hit #2 on
+        RFCs. It hit #2 on
         <a
           class="text-link"
           href="https://news.ycombinator.com/item?id=40277547"
           >Hacker News</a
-        >, got 235 early access sign-ups (Wave, PostHog, Deno, Pylon Lending,
-        etc) and 300+ GitHub stars.
+        >
+        and got 235 early access sign-ups (Wave, PostHog, Deno, Pylon Lending,
+        etc).
       </p>
       <p class="text-p">
         I was a Product Engineer at Frappe, where I
@@ -129,8 +130,8 @@
       <p class="text-p">
         I built
         <a class="text-link" href="https://samay.app/">Samay</a> — a group
-        scheduling tool to help people find a time which works for everyone. It
-        has been used to create 2.5k+ polls and got 300+ GitHub stars.
+        scheduling tool. It has helped lots of people find a time which works
+        for everyone.
       </p>
       <p class="text-p">
         I was one of the SWE interns in HackerRank's
