--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Anand Baburajan" />
     <meta
       name="description"
-      content="Hi, I'm Anand. I work on marketing and growth initiatives at Ente. I'm also the creator of CQ2, Wordamour and Samay. Previously, I was a Product Engineer at Frappe, a SWE intern at HackerRank and a GSoC student at LiberTEM. My current areas of interest are startups, football, movies, ritual social apps and psychology."
+      content="Hi, I'm Anand. I work on growth initiatives at Ente. I'm also the creator of CQ2, Wordamour and Samay. Previously, I was a Product Engineer at Frappe, a SWE intern at HackerRank and a GSoC student at LiberTEM. My current areas of interest are startups, football, movies, ritual social apps and psychology."
     />
     <style>
       @font-face {
@@ -98,7 +98,7 @@
       <br />
       <p class="text-p">Hi, I'm Anand.</p>
       <p class="text-p">
-        I work on marketing and growth initiatives at
+        I work on growth initiatives at
         <a class="text-link" href="https://ente.io/">Ente</a>.
       </p>
       <p class="text-p">
@@ -194,12 +194,6 @@
           target="_blank"
         >
           GitHub </a
-        ><br />
-        <a
-          class="text-link"
-          href="https://www.linkedin.com/in/anandbaburajan/"
-          target="_blank"
-          >LinkedIn </a
         ><br />
       </p>
       <br />
