--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         lots of people earn brownie points with their spouses.
       </p>
       <p class="text-p">
-        I built <a class="text-link" href="https://cq2.co/">CQ2</a> — a tool for
+        I built <a class="text-link" href="https://cq2.vercel.app/">CQ2</a> — a tool for
         RFCs. It hit #2 on
         <a
           class="text-link"
